spacing fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -10228,7 +10228,7 @@ body {
 }
 
 .projects-section {
-  padding: 10rem 0;
+  padding: 1rem 0;
 }
 .projects-section .featured-text {
   padding: 2rem;
@@ -10237,7 +10237,7 @@ body {
   .projects-section .featured-text {
     padding: 0 0 0 2rem;
     border-left: 0.5rem solid #64a19d;
-    margin-left: -7rem;
+    margin-left: -5srem;
   }
 }
 .projects-section .project-text {
@@ -10275,7 +10275,7 @@ body {
 }
 
 .contact-section {
-  padding-top: 5rem;
+  padding-top: 1rem;
 }
 .contact-section .card {
   border: 0;
